--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "history": "^4.6.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.1"
   },
